--- a/miniprogram/pages/server/index.wxml
+++ b/miniprogram/pages/server/index.wxml
@@ -4,25 +4,17 @@
   <view class="cu-bar search bg-white">
     <view class="search-form round">
       <text class="cuIcon-search"></text>
-      <input type="text" placeholder="输入谱面ID查询游玩记录" confirm-type="search"></input>
+      <input type="text" placeholder="输入谱面ID查询游玩记录" confirm-type="search" bindinput="handlebeatmapid"></input>
     </view>
     <view class="action">
-      <button class="cu-btn bg-green shadow-blur round" style="width: 120rpx;">搜索</button>
+      <button class="cu-btn bg-green shadow-blur round" style="width: 120rpx;" bindtap="playrecord">搜索</button>
     </view>
   </view>
-  <!-- <view class="cu-bar bg-white solid-bottom margin-top">
-    <view class="action">
-      <text class="cuIcon-title text-orange "></text> 宫格列表
-    </view>
-    <view class="action">
-      <button class="cu-btn bg-green shadow" bindtap="showModal" data-target="gridModal" style="width: 120rpx;">设置</button>
-    </view>
-  </view> -->
-  <view class="cu-modal {{modalName=='gridModal'?'show':''}}" bindtap="hideModal">
+  <view class="cu-modal">
     <view class="cu-dialog" catchtap>
       <radio-group class="block" bindchange="gridchange">
         <view class="cu-list menu text-left">
-          <view class="cu-item" wx:for="{{3}}" wx:key>
+          <view class="cu-item" wx:for="{{2}}" wx:key>
             <label class="flex justify-between align-center flex-sub">
               <view class="flex-sub">{{index +3}} 列</view>
               <radio class="round" value="{{index +3}}" checked="{{gridCol==index+3}}"></radio>
@@ -42,9 +34,9 @@
       </view>
     </view>
   </view>
-  <view class="cu-list grid col-{{gridCol}} {{gridBorder?'':'no-border'}}">
-    <view class="cu-item" wx:for="{{iconList}}" wx:key wx:if="{{index<gridCol*2}}">
-      <view class="cuIcon-{{item.icon}} text-{{item.color}}">
+  <view class="cu-list grid col-{{gridCol}}">
+    <view class="cu-item" wx:for="{{iconList}}" wx:key wx:if="{{index<gridCol*2}}" >
+      <view class="iconfont {{item.icon}} text-{{item.color}}" bindtap="fun{{item.flag}}">
         <view class="cu-tag badge" wx:if="{{item.badge!=0}}">
           <block wx:if="{{item.badge!=1}}">{{item.badge>99?"99+":item.badge}}</block>
         </view>
@@ -52,4 +44,39 @@
       <text>{{item.name}}</text>
     </view>
   </view>
+  <view class="cu-bar bg-white margin-top">
+  <view class="action">
+    <text class="cuIcon-title text-orange "></text> Tips:
+  </view>
+  <view class="action">
+  </view>
+</view>
+<view class="cu-bar bg-white margin-top">
+  <view class="action">
+    <text class="cuIcon-title text-orange "></text> 使用功能之前需要先绑定osu账号
+  </view>
+  <view class="action">
+  </view>
+</view>
+<view class="cu-bar bg-white margin-top">
+  <view class="action">
+    <text class="cuIcon-title text-orange "></text> 谱面ID为beatmapid而非beatmapsid
+  </view>
+  <view class="action">
+  </view>
+</view>
+<view class="cu-bar bg-white margin-top">
+  <view class="action">
+    <text class="cuIcon-title text-orange "></text> 最近游玩仅能查询到24h内的记录
+  </view>
+  <view class="action">
+  </view>
+</view>
+<view class="cu-bar bg-white margin-top">
+  <view class="action">
+    <text class="cuIcon-title text-orange "></text> 您的双手是为了您的一生服务的而非OSU
+  </view>
+  <view class="action">
+  </view>
+</view>
 </view>
